fix: navbar on small screen

--- a/public/assets_v3/css/custom.css
+++ b/public/assets_v3/css/custom.css
@@ -6,6 +6,16 @@
     --section-desc-text-color: #2A2A2A;
 }
 
+.navbar-toggler {
+    padding: var(--bs-navbar-toggler-padding-y) var(--bs-navbar-toggler-padding-x);
+    font-size: var(--bs-navbar-toggler-font-size);
+    line-height: 1;
+    color: white;
+    background-color: white;
+    border: var(--bs-border-width) solid var(--bs-navbar-toggler-border-color);
+    border-radius: var(--bs-navbar-toggler-border-radius);
+    transition: var(--bs-navbar-toggler-transition);
+
 /* utils */
 .content-body-title {
     font-family: 'Outfit';
